fixed wrapping

--- a/src/style/chatMsg.css
+++ b/src/style/chatMsg.css
@@ -26,7 +26,7 @@
 /*** class styles ***/
 
 .msgWrapper {
-    width: fit-content;
+    width: max-width;
     block-size: fit-content;
     max-width: 70%;
     margin-bottom: var(--feedbackMargin);
@@ -55,7 +55,7 @@
     border-top-left-radius: var(--roundCorner);
     border-top-right-radius: var(--roundCorner);
     word-wrap: break-word;
-    max-width: fit-content;
+    /* max-width: fit-content; */
 
     /* spring animation */
     animation-name: animSpringFontSize;
